# agent-sandbox

./: .gitignore  Cargo.toml  Makefile  README.md  buf.gen.yaml  buf.yaml  build.rs
.github/workflows/: build-binary.yml  ci.yml
proto/agentsandbox/v1/: agent_sandbox.proto
scripts/: proto-generate.sh
sdk/go/: README.md  client.go  go.mod  helpers.go  helpers_test.go  integration_test.go  types.go
sdk/go/proto/agentsandbox/v1/: agent_sandbox.pb.go  agent_sandbox_grpc.pb.go
src/: backend.rs  cli.rs  landlock_exec.rs  main.rs  proto.rs  runner.rs  seccomp_net.rs  service.rs  store.rs  workspace_locks.rs
