[package]
name = "agent-sandbox"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.6", features = ["derive", "env"] }
hex = "0.4"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tokio = { version = "1.52", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tonic = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23", features = ["serde", "v4"] }
walkdir = "2.5"
which = "8.0"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
libc = "0.2"

[build-dependencies]
tonic-prost-build = "0.14"
